<resources>
    <string name="app_name">Lets</string>
    <string name="tab1_string">广场</string>
    <string name="tab2_string">通讯录</string>
    <string name="tab3_string">会话</string>
    <string name="tab4_string">我</string>

    <string name="new_events">新活动</string>

    <string name="please_login_str">请先登入</string>
    <string name="sign_up_str">注册</string>
    <string name="forget_password_str">忘记密码</string>
    <string name="third_login">使用微信、QQ、微博账号登入</string>

    <string name="sign_up_new_user_str">注册新用户</string>

    <string name="add_new_event">活动</string>
    <string name="add_event_details">活动详情</string>
    <string name="join_event">我要报名</string>


    <string name="preview_image">预览</string>



    <string name="chat">聊天</string>
    <string name="str_chat_recorder_normal">按住说话</string>
    <string name="str_chat_recorder_recording">松开结束</string>
    <string name="str_chat_recorder_want_cancel">松开手指，取消发送</string>
    <string name="str_chat_recorder_too_short">录音时间过短</string>


    <!--聊天相关-->
    <string name="network_disconnected_hint">当前网络不可用, 请检查你的网络设置</string>
    <string name="actionbar_msg">聊天</string>
    <string name="cross_app_key">跨应用</string>
    <string name="actionbar_conversation">会话</string>
    <string name="actionbar_contact">通讯录</string>
    <string name="actionbar_me">我</string>
    <string name="search_friend_hit">邮箱/用户名/ID</string>
    <string name="search">搜索...</string>
    <string name="take_monent">稍等片刻</string>
    <string name="add">添加</string>
    <string name="add_friend">添加朋友</string>
    <string name="fetch_user_info_failed">用户信息获取失败</string>
    <string name="create_group">创建群聊</string>
    <string name="creating_hint">创建中</string>
    <string name="create_user">我们正在建立您的个人档案</string>
    <string name="search_friend_title_bar">搜索结果</string>
    <string name="friend_request_hit">请你输入你的添加好友请求</string>
    <string name="friend_request_input_hit">我是…</string>
    <string name="send_request">发送请求</string>
    <string name="copy">复制</string>
    <string name="forward_msg">转发</string>
    <string name="copy_toast">已复制</string>
    <string name="delete">删除</string>
    <string name="delete_conv">删除该聊天</string>
    <string name="create_file_failed">创建文件失败</string>
    <string name="record_voice_hint">按住 说话</string>
    <string name="cancel_record_voice_hint">松开手指，取消发送</string>
    <string name="send_voice_hint">松开 结束</string>
    <string name="move_to_cancel_hint">手指上滑，取消发送</string>
    <string name="rest_record_time_hint">还可以说%s秒</string>
    <string name="combine_title">(%s)</string>
    <string name="file_not_found_toast">文件丢失</string>
    <string name="not_select_photo">你没有选择照片，请重新选择</string>
    <string name="picture_not_found">没有找到您想要的图片</string>
    <string name="loading">正在加载</string>
    <string name="load_failed_toast">加载失败</string>
    <string name="info_null">未填写</string>
    <string name="change_avatar">修改头像</string>
    <string name="operation">操作</string>
    <string name="origin_picture">原图</string>
    <string name="choose">选择</string>
    <string name="send">发送</string>
    <string name="send_message">发消息</string>
    <string name="sending_hint">正在发送</string>
    <string name="resend_message_hint">重发该消息？</string>
    <string name="resend_commit">重发</string>
    <string name="cancel">取消</string>
    <string name="picture_num_limit_toast">你最多只能同时发送9张图片</string>
    <string name="load_origin_image">查看原图</string>
    <string name="downloading_hint">正在下载</string>
    <string name="download_completed_toast">下载完成</string>
    <string name="choose_album_title">选择相册</string>
    <string name="friend_opt_change_name">修改备注</string>
    <string name="friend_opt_delete">删除好友</string>
    <string name="friend_opt_detail">详细资料</string>
    <string name="detail_info">个人资料</string>
    <string name="voice_length">10"</string>
    <string name="symbol_second">\"</string>
    <string name="time_too_short_toast">时间太短！</string>
    <string name="file_fetch_failed">文件获取失败</string>
    <string name="record_voice_permission_denied">请在应用的权限管理中将使用录音选项设置为允许，
        否则将无法使用录音功能</string>
    <string name="record_voice_permission_request">若要使用语音功能，请选择允许录音</string>
    <string name="voice_fetch_failed_toast">获取语音失败，请重试</string>
    <string name="draft">[草稿]</string>
    <string name="picture">图片</string>
    <string name="type_picture">[图片]</string>
    <string name="type_voice">[语音]</string>
    <string name="type_location">[位置]</string>
    <string name="video">视频</string>
    <string name="group_notification">[群成员变动]</string>
    <string name="type_custom">[自定义消息]</string>
    <string name="time_format_year_month_day">yyyy年-MM月-dd日</string>
    <string name="time_format_accuracy">yyyy-MM-dd HH:mm </string>
    <string name="time_format_hours">HH:mm</string>
    <string name="yesterday">昨天</string>
    <string name="before_dawn">凌晨</string>
    <string name="morning">早上</string>
    <string name="afternoon">下午</string>
    <string name="night">晚上</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="second">秒</string>
    <string name="local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
    <string name="sdcard_not_exist_toast">暂无外部存储</string>
    <string name="camera_not_prepared">摄像头尚未准备好</string>
    <string name="sdcard_not_prepare_toast">sdcard尚未准备好</string>

    <string name="select_friend_title">选择朋友</string>
    <string name="selected_num">(%s)</string>

    <!-- ReLogin/login/register界面中使用到的字符串 -->
    <string name="change_user_btn">切换账号</string>
    <string name="register">注册</string>
    <string name="registering_hint">注册中</string>
    <string name="register_failed_toast">注册失败</string>
    <string name="login">登录</string>
    <string name="login_hint">登录中</string>
    <string name="user_not_exist_toast">该用户不存在</string>
    <string name="user_already_exist_toast">该用户已存在</string>
    <string name="user_add_self_toast">不能添加自己为好友</string>
    <string name="register_username_hit">用户名(数字、字母、_ 组成)</string>
    <string name="username_not_null_toast">用户名不能为空</string>
    <string name="nickname_not_null_toast">昵称不能为空</string>
    <string name="password_not_null_toast">密码不能为空</string>
    <string name="password_length_illegal">密码长度要在4-128个字节之间</string>
    <string name="password_same_to_previous">不能和原密码相同，请输入新密码</string>

    <!--以下为错误码提示-->
    <string name="server_800002">AppKey信息为空</string>
    <string name="server_800003">AppKey未注册</string>
    <string name="server_800004">用户ID为空</string>
    <string name="server_800005">用户ID未注册(AppKey无该UID)</string>
    <string name="server_800006">用户ID不存在(数据库中无该UID)</string>
    <string name="server_800012">请重新登录</string>
    <string name="server_800013">您的账号已登出，请重新登录</string>
    <string name="server_801003">用户名不存在</string>
    <string name="server_802001">用户名为空</string>
    <string name="server_801004">密码错误</string>
    <string name="server_803001">发送消息失败，状态存储异常</string>
    <string name="server_803002">发送消息失败，系统网络异常</string>
    <string name="server_803003">发送失败，目标用户未注册或不存在</string>
    <string name="server_803004">发送失败，此群已被删除</string>
    <string name="server_803005">您已被请出此群，不能发送消息</string>
    <string name="server_803008">消息已发出，但被对方拒收了。</string>
    <string name="server_803010">发送消息的频率超过限制，发送失败</string>
    <string name="server_808003">讨论组数量已达上限，创建失败</string>
    <string name="server_808004">群组名长度超出上限</string>
    <string name="server_810003">用户不属于该群组</string>
    <string name="server_810005">要添加的用户尚未注册</string>
    <string name="server_810007">用户已存在</string>
    <string name="server_810008">讨论组的成员数量已达上限，添加失败</string>
    <string name="server_810009">该用户拥有的讨论组数量已达上限，添加失败</string>
    <string name="server_811003">用户不在该讨论组中，删除成员失败</string>
    <string name="server_812002">您已被请出此群，不能修改相关信息</string>
    <string name="server_818001">要添加的黑名单列表为空，添加失败</string>
    <string name="server_818002">要添加的黑名单列表中有成员不存在，添加失败</string>
    <string name="server_818003">要添加的黑名单列表中有成员不能被添加，添加失败</string>
    <string name="server_818004">要添加的黑名单列表中有成员重复添加，添加失败</string>
    <string name="sdk_http_899001">用户已存在</string>
    <string name="sdk_http_899006">该群已被删除</string>
    <string name="sdk_http_898005">uid不存在</string>
    <string name="sdk_http_898006">此群已被删除</string>
    <string name="sdk_http_898008">校验失败</string>
    <string name="sdk_http_898009">APPKey不存在</string>
    <string name="sdk_http_898010">请求失败，请稍候重试</string>
    <string name="sdk_http_898030">系统繁忙，稍后重试</string>
    <string name="sdk_87x_871104">服务器返回错误</string>
    <string name="sdk_87x_871303">用户名需以数字或字母开头，长度在4-128个字节之间，且不能带_ @ -以外的字符</string>
    <string name="sdk_87x_871304">密码长度要在4-128个字节之间</string>
    <string name="sdk_87x_871305">名称长度须小于64个字节</string>
    <string name="sdk_87x_871309">消息所含文件不存在</string>
    <string name="sdk_87x_871310">网络已断开，请检查网络连接</string>
    <string name="sdk_87x_871311">用户未设定头像，下载头像失败</string>
    <string name="sdk_87x_871312">ImageContent创建失败</string>
    <string name="sdk_87x_871403">第三方上传失败，请稍后重试</string>
    <string name="sdk_87x_871404">下载失败，请稍后重试</string>
    <string name="sdk_87x_871501">appkey与appid不匹配或者token无效</string>
    <string name="sdk_87x_871502">appkey无效</string>
    <string name="sdk_87x_871503">appkey与platform不匹配</string>
    <string name="sdk_87x_871504">push注册还未完成，请稍后重试</string>
    <string name="sdk_87x_871505">包名不存在</string>
    <string name="sdk_87x_871506">imei无效</string>
    <string name="sdk_87x_871201">请求超时，请检查您的网络</string>

    <string name="info_str">个人信息</string>
    <string name="account_str">账号</string>
    <string name="nick_str">昵称</string>
    <string name="sex_str">性别</string>
    <string name="location_str">地区</string>
    <string name="quote_str">个性签名</string>
    <string name="settings_str">设置</string>
    <string name="modify_password_str">修改密码</string>
    <string name="about_str">关于</string>
    <string name="feedback_str">意见反馈</string>
    <string name="exit_str">安全退出</string>

    <string name="newest_events_str">最新活动</string>
    <string name="hot_events_str">热门活动</string>
    <string name="rank_str">达人榜</string>
    <string name="simple_events_str">活动宝典</string>
    <string name="old_events_str">活动回顾</string>
    <string name="my_events_str">我的活动</string>
    <string name="lets_eat">约饭</string>
    <string name="lets_sport">约跑</string>
    <string name="lets_study">约自习</string>
    <string name="lets_report">约讲座</string>
    <string name="lets_others">其他</string>
    <string name="recommend_events_str">推荐活动</string>

    <string name="headline_str">头条</string>



</resources>
