<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/id_square_menu_newest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/square_banner_menue_item_iv_size"
                    android:layout_height="@dimen/square_banner_menue_item_iv_size"
                    android:src="@drawable/ic_menu_new" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newest_events_str"
                    android:textSize="@dimen/square_banner_menue_item_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_square_menu_hotest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/square_banner_menue_item_iv_size"
                    android:layout_height="@dimen/square_banner_menue_item_iv_size"
                    android:src="@drawable/ic_menu_hot" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_events_str"
                    android:textSize="@dimen/square_banner_menue_item_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_square_menu_classic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/square_banner_menue_item_iv_size"
                    android:layout_height="@dimen/square_banner_menue_item_iv_size"
                    android:src="@drawable/ic_menu_simple" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simple_events_str"
                    android:textSize="@dimen/square_banner_menue_item_text_size" />
            </LinearLayout>

            <LinearLayout

                android:id="@+id/id_square_menu_rank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/square_banner_menue_item_iv_size"
                    android:layout_height="@dimen/square_banner_menue_item_iv_size"
                    android:src="@drawable/ic_menu_rank" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rank_str"
                    android:textSize="@dimen/square_banner_menue_item_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_square_menu_my"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/square_banner_menue_item_iv_size"
                    android:layout_height="@dimen/square_banner_menue_item_iv_size"
                    android:src="@drawable/ic_menu_my" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_events_str"
                    android:textSize="@dimen/square_banner_menue_item_text_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/id_square_menu_lets_eat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/square_banner_menue_item_iv_size"
                    android:layout_height="@dimen/square_banner_menue_item_iv_size"
                    android:src="@drawable/ic_menu_eat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lets_eat"
                    android:textSize="@dimen/square_banner_menue_item_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_square_menu_lets_run"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/square_banner_menue_item_iv_size"
                    android:layout_height="@dimen/square_banner_menue_item_iv_size"
                    android:src="@drawable/ic_menu_run" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lets_sport"
                    android:textSize="@dimen/square_banner_menue_item_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_square_menu_lets_study"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/square_banner_menue_item_iv_size"
                    android:layout_height="@dimen/square_banner_menue_item_iv_size"
                    android:src="@drawable/ic_menu_study" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lets_study"
                    android:textSize="@dimen/square_banner_menue_item_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_square_menu_lets_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/square_banner_menue_item_iv_size"
                    android:layout_height="@dimen/square_banner_menue_item_iv_size"
                    android:src="@drawable/ic_menu_report" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lets_report"
                    android:textSize="@dimen/square_banner_menue_item_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_square_menu_lets_others"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/square_banner_menue_item_iv_size"
                    android:layout_height="@dimen/square_banner_menue_item_iv_size"
                    android:src="@drawable/ic_menu_coffee" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lets_others"
                    android:textSize="@dimen/square_banner_menue_item_text_size" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/me_split_line_color" />



    </LinearLayout>
