<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.meshine.letsstudyclient.widget.TopBarView
        android:id="@+id/id_sign_in_topbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_height"
        app:centerText="@string/please_login_str"
        app:isShowLeft="true"
        app:isShowRight="false"
        app:isShowWarn="false"
        app:isBack = "true"
        app:leftSrc="@drawable/ic_back">

    </com.meshine.letsstudyclient.widget.TopBarView>

    <LinearLayout
        android:id="@+id/id_login_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/id_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_user_small"
            android:hint="账号" />

        <EditText
            android:id="@+id/id_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_password_small"
            android:hint="密码" />

        <Button
            android:id="@+id/id_login_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_sign_in"
            android:text="登入" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_alignParentStart="true"
            android:layout_margin="5dp"
            android:id="@+id/id_login_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sign_up_str"
            android:textColor="@color/blue"
            android:textSize="13sp" />
            <TextView
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:id="@+id/id_login_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/forget_password_str"
                android:textColor="@color/blue"
                android:textSize="13sp" />
        </RelativeLayout>


    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/me_split_line_color"/>
        <TextView
            android:background="@color/white"
             android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_login"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_marginTop="30dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/id_login_wechat"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_we_chat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="微信登入" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/id_login_qq"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_qq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="QQ登入" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/id_login_xin_lang"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_xin_lang" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="微博登入" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
